load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")

# gazelle:prefix github.com/mlekena/theknology/frontend

gazelle(name = "gazelle")

nogo(
    name = "my_nogo",
    visibility = ["//visibility:public"],
    deps = [
        ":frontend",
    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# go_library(
#     name = "lib",
#     srcs = ["hello.go"],
#     importpath = "github.com/mlekena/theknology/",
#     visibility = ["//visibility:public"],
#     deps = [],
# )

go_library(
    name = "frontend_lib",
    srcs = ["hello.go"],
    importpath = "github.com/mlekena/theknology/frontend",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_klog_v2//:klog",
        # "@com_github_gin_gonic_gin//:go_default_library"
        ],
)

go_binary(
    name = "frontend",
    embed = [":frontend_lib"],
    visibility = ["//visibility:public"],
)