###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
# See https://registry.bazel.build/ for repos and their latest versions
###############################################################################
module (
    name = "theknology",
    repo_name = "frontend",
    version = "1.0"
)
bazel_dep(name = "rules_go", version = "0.47.1",  repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.36.0")#, repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:my_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
# # import dependencies listed inthe go.mod file
# go_deps.from_file(go_mod = "//:go.mod")

# # All *direct* Go dependencies of the module have to be listed explicitly.
    # go_deps,
# use_repo(
#     "com_github_gogo_protobuf",
#     "com_github_golang_mock",
#     "com_github_golang_protobuf",
#     "org_golang_x_net",
# )