###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
# See https://registry.bazel.build/ for repos and their latest versions
###############################################################################
module(
    name = "theknology",
    version = "1.0",
    repo_name = "frontend",
)

bazel_dep(name = "rules_go", version = "0.47.1")  #,  repo_name = "io_bazel_rules_go")
bazel_dep(name = "bazel_features", version = "1.9.1", repo_name = "io_bazel_rules_go_bazel_features")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.6.1")
# bazel_dep(name = "gin_gonic", version = "1.10.0", repo_name = "com_github_gin_gonic_gin")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:my_nogo")
use_repo(
    go_sdk,
    "go_toolchains",
)

register_toolchains("@go_toolchains//:all")

bazel_dep(name = "gazelle", version = "0.36.0")  #, repo_name = "bazel_gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# # import dependencies listed inthe go.mod file
go_deps.from_file(go_mod = "//:go.mod")

# http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# git_override(
#     module_name = "com_github_gin_gonic_gin",
#     remote = "https://github.com/gin-gonic/gin.git",
#     commit = "75ccf94d605a05fe24817fc2f166f6f2959d5cea",
# )

# TODO: Watch video of andreas on direct dependenceis from git using fucking bzlmod
